--- a/ar-research.html
+++ b/ar-research.html
@@ -430,7 +430,7 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px; float: right;">➔ مرحبا أهلا وسهلا! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px; float: right;">➔ التقدم البحثي</text>
         <span style="float:left;">
           <span style="float:left;font-family:verdana">
             <select id="languages" name="languages"
@@ -453,7 +453,9 @@
 
       <br class="display-mobile">
       <hr class="display-mobile" style="width:113%">
-      <h3 class="display-mobile" style="text-align: right; direction: rtl;">اهتمامات البحث</h3>
+      <h3 class="display-mobile" style="text-align: right; direction: rtl;">اهتمامات البحث<small><small><small> 「العلم
+              بلا حدود」
+            </small></small> </small></h3>
 
       <p style="text-align: right; direction: rtl;">
 
