--- a/ar-resume.html
+++ b/ar-resume.html
@@ -386,8 +386,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• أبحاث حقوق الملكية</small></a></li>
             </div>
 
-            <li><a href="ar-resume.html"><strong><small style="color: rgb(253, 93, 7);">▸ السيرة
-                    الذاتية</strong></small></a></li>
+            <li><a href="ar-resume.html"><strong><small style="color: rgb(253, 93, 7);">
+                    ▸ السيرةالذاتية</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-resume.html#education-mobile"
                   style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• التعليم</small></a></li>
@@ -433,7 +433,7 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px; float: right;">➔ مرحبا أهلا وسهلا! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px; float: right;">➔ السيرة الذاتية </text>
         <span style="float:left;">
           <span style="float:left;font-family:verdana">
             <select id="languages" name="languages"
