--- a/de-research.html
+++ b/de-research.html
@@ -420,7 +420,7 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Servus! Grüezi!</text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Forschungsfortschritt</text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
@@ -551,7 +551,8 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="publications">
-        <h3>Publikationen</h3>
+        <h3>Publikationen<small class="display-mobile"><small><small>「Wissenschaft ohne Grenzen」</small></small></small>
+        </h3>
 
         <ul class="square">
           <li><strong>Saubere Energietechnologien / Elektrochemie</strong></li>
