--- a/en-research.html
+++ b/en-research.html
@@ -423,7 +423,8 @@
       </p>
 
       <hr class="display-mobile" style="width:113%">
-      <h3 class="display-mobile">Research Interests</h3>
+      <h3 class="display-mobile">Research Interests <small class="display-mobile"><small><small>「Science without
+              borders」</small></small></small></h3>
 
 
       <p align="justify">
