--- a/es-research.html
+++ b/es-research.html
@@ -423,7 +423,8 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ ¡Hola, qué alegría!</text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Avances de la
+          investigación</text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
@@ -553,7 +554,8 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="publications">
-        <h3>Publicaciones</h3>
+        <h3>Publicaciones<small class="display-mobile"><small><small>「Ciencia sin fronteras」</small></small></small>
+        </h3>
         <ul class="square">
           <li><strong>Tecnología de energía limpia / Electroquímica</strong></li>
         </ul>
