--- a/fr-research.html
+++ b/fr-research.html
@@ -435,7 +435,8 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Bonjour! Salut! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Progrès de la
+          recherche</text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
@@ -586,7 +587,8 @@
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
       <div class="doc-section" id="publications">
-        <h3>Publications</h3>
+        <h3>Publications<small class="display-mobile"><small><small>「Science sans frontières」</small></small></small>
+        </h3>
         <ul class="square">
           <li><strong>Technologie des énergies propres / Électrochimie</strong></li>
         </ul>
