--- a/fr-resume.html
+++ b/fr-resume.html
@@ -434,7 +434,7 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Bonjour! Salut! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Curriculum vitæ </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
