--- a/ar-activities.html
+++ b/ar-activities.html
@@ -433,7 +433,7 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px; float: right;">➔ مرحبا أهلا وسهلا! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px; float: right;">➔ الأنشطة</text>
         <span style="float:left;">
           <span style="float:left;font-family:verdana">
             <select id="languages" name="languages"
