--- a/de-resume.html
+++ b/de-resume.html
@@ -420,7 +420,7 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Servus! Grüezi!</text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Lebenslauf</text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
