--- a/es-resume.html
+++ b/es-resume.html
@@ -424,7 +424,8 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ ¡Hola, qué alegría!</text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Currículum
+          vitae</text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
