--- a/ru-research.html
+++ b/ru-research.html
@@ -537,7 +537,7 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="publications">
-        <h3>Публикации<small><small><small>「Наука без границ」</small></small> </small></h3>
+        <h3>Публикации<small class="display-mobile"><small><small>「Наука без границ」</small></small> </small></h3>
 
 
         <ul class="square">
