--- a/jp-research.html
+++ b/jp-research.html
@@ -353,7 +353,7 @@
 
 
       <div class="topnav">
-        <a href="jp.html" class="active">
+        <a href="jp-research.html" class="active">
           <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">シュイ</text></rt></ruby>
             <ruby>泓<rt><text style="letter-spacing: -4px;">ホーン</text></rt></ruby> <small><ruby>博士<rt>エネルギー</rt>
               </ruby></small>
