--- a/en-research.html
+++ b/en-research.html
@@ -423,8 +423,7 @@
       </p>
 
       <hr class="display-mobile" style="width:113%">
-      <h3 class="display-mobile">Research Interests <small class="display-mobile"><small><small>「Science without
-              borders」</small></small></small></h3>
+      <h3 class="display-mobile">Research Interests </h3>
 
 
       <p align="justify">
@@ -588,7 +587,8 @@
 
 
       <div class="doc-section" id="publications">
-        <h3>Publications</h3>
+        <h3>Publications<small class="display-mobile"><small><small>「Science without
+                borders」</small></small></small></h3>
 
         <ul class="square">
           <li><strong>Clean Energy Tech / Electrochemistry</strong></li>
