--- a/cn-contact.html
+++ b/cn-contact.html
@@ -610,12 +610,11 @@
           <!-- <li><strong>线上会议</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)</li> -->
           <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1800+)<br></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1900+)<br></li>
           <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
-              id="citation-count">300+</span>)<br></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: 320+)<br></li>
           <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
-              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: 13700+)<br></li>
+              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: 13900+)<br></li>
 
         </ul>
         </p>
