--- a/it-contact.html
+++ b/it-contact.html
@@ -133,6 +133,7 @@
     }
   </style>
 
+  <!---意大利语冠词特别版，请勿copy-->
   <script type="module">
     async function fetchCountries() {
       const response = await fetch('/js/countries.json');
@@ -151,9 +152,28 @@
     }
 
     function addItalianArticle(countryName) {
-      const firstLetter = countryName.charAt(0).toLowerCase();
-      const isVowel = 'aeiou'.indexOf(firstLetter) !== -1;
-      return isVowel ? `di'${countryName}` : `di ${countryName}`;
+      // 冠词规则，针对不同的词性和复数形式
+      const articles = {
+        'il': 'del',
+        'lo': 'dello',
+        'l\'': 'dell\'',
+        'i': 'dei',
+        'gli': 'degli',
+        'la': 'della',
+        'le': 'delle'
+      };
+
+      // 将首个单词转换为小写以匹配冠词，并排除可能的标点
+      const words = countryName.split(/\s+/); // 匹配空格分隔
+      const article = words[0].toLowerCase().replace(/[^\w]/g, ''); // 去除非字母字符
+
+      // 优先判断是否有冠词
+      if (articles[article]) {
+        return `${articles[article]} ${words.slice(1).join(' ')}`;
+      }
+
+      // 如果没有冠词，默认使用 "di"
+      return `di ${countryName}`;
     }
 
     async function displayCountryName() {
@@ -161,19 +181,21 @@
       const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
       const data = await response.json();
       const countryCode = data.country.toLowerCase();
-      const language = 'italian'; // 更改为意大利语
+      const language = 'italian'; // 使用意大利语
 
       const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
       const formattedCountryName = addItalianArticle(countryName);
 
-      document.getElementById("location2").textContent = formattedCountryName;
       document.getElementById("location").textContent = formattedCountryName;
+      document.getElementById("location2").textContent = formattedCountryName;
+
       document.getElementById("country-flag").src = `./images/wflags/${countryCode}.png`;
       document.getElementById("country-flag").alt = countryName;
     }
 
     document.addEventListener('DOMContentLoaded', displayCountryName);
   </script>
+
 
 
   <!-- block save as
