--- a/de-activities.html
+++ b/de-activities.html
@@ -382,9 +382,8 @@
             <option value="en-activities.html">English</option>
             <option value="es-activities.html">Español</option>
             <option value="fr-activities.html">Français</option>
-            <!---
             <option value="it-activities.html">Italiano</option>
-            <option value="ru-activities.html">Русский</option>
+            <!---<option value="ru-activities.html">Русский</option>
             <option value="cn-activities.html">中文</option>
             <option value="jp-activities.html">日本語</option>
             <option value="kr-activities.html">한국어</option>
@@ -478,9 +477,8 @@
               <option value="en-activities.html">🇬🇧 English</option>
               <option value="es-activities.html">🇪🇸 Español</option>
               <option value="fr-activities.html">🇫🇷 Français</option>
-              <!---
               <option value="it-activities.html">🇮🇹 Italiano</option>
-              <option value="ru-activities.html">🇷🇺 Русский</option>
+              <!---<option value="ru-activities.html">🇷🇺 Русский</option>
               <option value="cn-activities.html">🇨🇳 中文</option>
               <option value="jp-activities.html">🇯🇵 日本語</option>
               <option value="kr-activities.html">🇰🇷 한국어</option>
