--- a/it-activities.html
+++ b/it-activities.html
@@ -345,11 +345,11 @@
             <option value="en-activities.html">English</option>
             <option value="es-activities.html">Español</option>
             <option value="fr-activities.html">Français</option>
-            <option value="ru-activities.html">Русский</option>
+            <!-- <option value="ru-activities.html">Русский</option>
             <option value="cn-activities.html">中文</option>
             <option value="jp-activities.html">日本語</option>
             <option value="kr-activities.html">한국어</option>
-            <option value="ar-activities.html">اللغة العربية</option>
+            <option value="ar-activities.html">اللغة العربية</option> -->
           </select>
         </span>
       </h3>
@@ -444,11 +444,11 @@
               <option value="en-activities.html">🇬🇧 English</option>
               <option value="es-activities.html">🇪🇸 Español</option>
               <option value="fr-activities.html">🇫🇷 Français</option>
-              <option value="ru-activities.html">🇷🇺 Русский</option>
+              <!-- <option value="ru-activities.html">🇷🇺 Русский</option>
               <option value="cn-activities.html">🇨🇳 中文</option>
               <option value="jp-activities.html">🇯🇵 日本語</option>
               <option value="kr-activities.html">🇰🇷 한국어</option>
-              <option value="ar-activities.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-activities.html">🇸🇦 اللغة العربية</option> -->
             </select>
           </span>
         </span>
