--- a/it-contact.html
+++ b/it-contact.html
@@ -425,11 +425,11 @@
             <option value="en-contact.html">English</option>
             <option value="es-contact.html">Español</option>
             <option value="fr-contact.html">Français</option>
-            <option value="ru-contact.html">Русский</option>
+            <!-- <option value="ru-contact.html">Русский</option>
             <option value="cn-contact.html">中文</option>
             <option value="jp-contact.html">日本語</option>
             <option value="kr-contact.html">한국어</option>
-            <option value="ar-contact.html">اللغة العربية</option>
+            <option value="ar-contact.html">اللغة العربية</option> -->
           </select>
         </span>
       </h3>
@@ -523,11 +523,11 @@
               <option value="en-contact.html">🇬🇧 English</option>
               <option value="es-contact.html">🇪🇸 Español</option>
               <option value="fr-contact.html">🇫🇷 Français</option>
-              <option value="ru-contact.html">🇷🇺 Русский</option>
+              <!-- <option value="ru-contact.html">🇷🇺 Русский</option>
               <option value="cn-contact.html">🇨🇳 中文</option>
               <option value="jp-contact.html">🇯🇵 日本語</option>
               <option value="kr-contact.html">🇰🇷 한국어</option>
-              <option value="ar-contact.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-contact.html">🇸🇦 اللغة العربية</option> -->
             </select>
           </span>
         </span>
