--- a/it-resume.html
+++ b/it-resume.html
@@ -343,11 +343,11 @@
             <option value="en-resume.html">English</option>
             <option value="es-resume.html">Español</option>
             <option value="fr-resume.html">Français</option>
-            <option value="ru-resume.html">Русский</option>
+            <!-- <option value="ru-resume.html">Русский</option>
             <option value="cn-resume.html">中文</option>
             <option value="jp-resume.html">日本語</option>
             <option value="kr-resume.html">한국어</option>
-            <option value="ar-resume.html">اللغة العربية</option>
+            <option value="ar-resume.html">اللغة العربية</option> -->
           </select>
         </span>
       </h3>
@@ -440,11 +440,11 @@
               <option value="en-resume.html">🇬🇧 English</option>
               <option value="es-resume.html">🇪🇸 Español</option>
               <option value="fr-resume.html">🇫🇷 Français</option>
-              <option value="ru-resume.html">🇷🇺 Русский</option>
+              <!-- <option value="ru-resume.html">🇷🇺 Русский</option>
               <option value="cn-resume.html">🇨🇳 中文</option>
               <option value="jp-resume.html">🇯🇵 日本語</option>
               <option value="kr-resume.html">🇰🇷 한국어</option>
-              <option value="ar-resume.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-resume.html">🇸🇦 اللغة العربية</option> -->
             </select>
           </span>
         </span>
