--- a/en-contact.html
+++ b/en-contact.html
@@ -368,10 +368,8 @@
             <option value="de-contact.html">Deutsch</option>
             <option value="es-contact.html">Español</option>
             <option value="fr-contact.html">Français</option>
-            <!---
-           
             <option value="it-contact.html">Italiano</option>
-            <option value="ru-contact.html">Русский</option>
+            <!---<option value="ru-contact.html">Русский</option>
             <option value="cn-contact.html">中文</option>
             <option value="jp-contact.html">日本語</option>
             <option value="kr-contact.html">한국어</option>
@@ -468,10 +466,8 @@
               <option value="de-contact.html">🇩🇪 Deutsch</option>
               <option value="es-contact.html">🇪🇸 Español</option>
               <option value="fr-contact.html">🇫🇷 Français</option>
-              <!---
-              
               <option value="it-contact.html">🇮🇹 Italiano</option>
-              <option value="ru-contact.html">🇷🇺 Русский</option>
+              <!---<option value="ru-contact.html">🇷🇺 Русский</option>
               <option value="cn-contact.html">🇨🇳 中文</option>
               <option value="jp-contact.html">🇯🇵 日本語</option>
               <option value="kr-contact.html">🇰🇷 한국어</option>
