--- a/en-research.html
+++ b/en-research.html
@@ -308,10 +308,8 @@
             <option value="de-research.html">Deutsch</option>
             <option value="es-research.html">Español</option>
             <option value="fr-research.html">Français</option>
-            <!---
-           
             <option value="it-research.html">Italiano</option>
-            <option value="ru-research.html">Русский</option>
+            <!---<option value="ru-research.html">Русский</option>
             <option value="cn-research.html">中文</option>
             <option value="jp-research.html">日本語</option>
             <option value="kr-research.html">한국어</option>
@@ -408,10 +406,8 @@
               <option value="de-research.html">🇩🇪 Deutsch</option>
               <option value="es-research.html">🇪🇸 Español</option>
               <option value="fr-research.html">🇫🇷 Français</option>
-              <!---
-              
               <option value="it-research.html">🇮🇹 Italiano</option>
-              <option value="ru-research.html">🇷🇺 Русский</option>
+              <!---<option value="ru-research.html">🇷🇺 Русский</option>
               <option value="cn-research.html">🇨🇳 中文</option>
               <option value="jp-research.html">🇯🇵 日本語</option>
               <option value="kr-research.html">🇰🇷 한국어</option>
