--- a/en-resume.html
+++ b/en-resume.html
@@ -323,10 +323,8 @@
             <option value="de-resume.html">Deutsch</option>
             <option value="es-resume.html">Español</option>
             <option value="fr-resume.html">Français</option>
-            <!---
-           
             <option value="it-resume.html">Italiano</option>
-            <option value="ru-resume.html">Русский</option>
+            <!---<option value="ru-resume.html">Русский</option>
             <option value="cn-resume.html">中文</option>
             <option value="jp-resume.html">日本語</option>
             <option value="kr-resume.html">한국어</option>
@@ -421,9 +419,8 @@
               <option value="de-resume.html">🇩🇪 Deutsch</option>
               <option value="es-resume.html">🇪🇸 Español</option>
               <option value="fr-resume.html">🇫🇷 Français</option>
-              <!---
-              
               <option value="it-resume.html">🇮🇹 Italiano</option>
+              <!---
               <option value="ru-resume.html">🇷🇺 Русский</option>
               <option value="cn-resume.html">🇨🇳 中文</option>
               <option value="jp-resume.html">🇯🇵 日本語</option>
