--- a/en.html
+++ b/en.html
@@ -375,10 +375,8 @@
             <option value="de.html">Deutsch</option>
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
-            <!---
-           
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <!---<option value="ru.html">Русский</option>
             <option value="cn.html">中文</option>
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
@@ -474,10 +472,8 @@
               <option value="de.html">🇩🇪 Deutsch</option>
               <option value="es.html">🇪🇸 Español</option>
               <option value="fr.html">🇫🇷 Français</option>
-              <!---
-              
               <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
+              <!---<option value="ru.html">🇷🇺 Русский</option>
               <option value="cn.html">🇨🇳 中文</option>
               <option value="jp.html">🇯🇵 日本語</option>
               <option value="kr.html">🇰🇷 한국어</option>
