--- a/es-contact.html
+++ b/es-contact.html
@@ -396,8 +396,8 @@
             <option value="de-contact.html">Deutsch</option>
             <option value="en-contact.html">English</option>
             <option value="fr-contact.html">Français</option>
-            <!---<option value="it.html">Italiano</option>
-            <option value="ru-contact.html">Русский</option>
+            <option value="it.html">Italiano</option>
+            <!---<option value="ru-contact.html">Русский</option>
             <option value="cn-contact.html">中文</option>
             <option value="jp-contact.html">日本語</option>
             <option value="kr-contact.html">한국어</option>
@@ -492,8 +492,8 @@
               <option value="de-contact.html">🇩🇪 Deutsch</option>
               <option value="en-contact.html">🇬🇧 English</option>
               <option value="fr-contact.html">🇫🇷 Français</option>
-              <!--- <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru-contact.html">🇷🇺 Русский</option>
+              <option value="it.html">🇮🇹 Italiano</option>
+              <!--- <option value="ru-contact.html">🇷🇺 Русский</option>
               <option value="cn-contact.html">🇨🇳 中文</option>
               <option value="jp-contact.html">🇯🇵 日本語</option>
               <option value="kr-contact.html">🇰🇷 한국어</option>
