--- a/es-research.html
+++ b/es-research.html
@@ -336,8 +336,8 @@
             <option value="de-research.html">Deutsch</option>
             <option value="en-research.html">English</option>
             <option value="fr-research.html">Français</option>
-            <!---<option value="it-research.html">Italiano</option>
-            <option value="ru-research.html">Русский</option>
+            <option value="it-research.html">Italiano</option>
+            <!---<option value="ru-research.html">Русский</option>
             <option value="cn-research.html">中文</option>
             <option value="jp-research.html">日本語</option>
             <option value="kr-research.html">한국어</option>
@@ -434,8 +434,8 @@
               <option value="de-research.html">🇩🇪 Deutsch</option>
               <option value="en-research.html">🇬🇧 English</option>
               <option value="fr-research.html">🇫🇷 Français</option>
-              <!--- <option value="it-research.html">🇮🇹 Italiano</option>
-              <option value="ru-research.html">🇷🇺 Русский</option>
+              <option value="it-research.html">🇮🇹 Italiano</option>
+              <!--- <option value="ru-research.html">🇷🇺 Русский</option>
               <option value="cn-research.html">🇨🇳 中文</option>
               <option value="jp-research.html">🇯🇵 日本語</option>
               <option value="kr-research.html">🇰🇷 한국어</option>
