--- a/es-resume.html
+++ b/es-resume.html
@@ -337,8 +337,8 @@
             <option value="de-resume.html">Deutsch</option>
             <option value="en-resume.html">English</option>
             <option value="fr-resume.html">Français</option>
-            <!---<option value="it-resume.html">Italiano</option>
-            <option value="ru-resume.html">Русский</option>
+            <option value="it-resume.html">Italiano</option>
+            <!---<option value="ru-resume.html">Русский</option>
             <option value="cn-resume.html">中文</option>
             <option value="jp-resume.html">日本語</option>
             <option value="kr-resume.html">한국어</option>
@@ -435,8 +435,8 @@
               <option value="de.html">🇩🇪 Deutsch</option>
               <option value="en.html">🇬🇧 English</option>
               <option value="fr.html">🇫🇷 Français</option>
-              <!--- <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
+              <option value="it.html">🇮🇹 Italiano</option>
+              <!---<option value="ru.html">🇷🇺 Русский</option>
               <option value="cn.html">🇨🇳 中文</option>
               <option value="jp.html">🇯🇵 日本語</option>
               <option value="kr.html">🇰🇷 한국어</option>
