--- a/fr-contact.html
+++ b/fr-contact.html
@@ -429,9 +429,8 @@
             <option value="de-contact.html">Deutsch</option>
             <option value="en-contact.html">English</option>
             <option value="es-contact.html">Español</option>
-            <!---
             <option value="it-contact.html">Italiano</option>
-            <option value="ru-contact.html">Русский</option>
+            <!---<option value="ru-contact.html">Русский</option>
             <option value="cn-contact.html">中文</option>
             <option value="jp-contact.html">日本語</option>
             <option value="kr-contact.html">한국어</option>
@@ -526,9 +525,8 @@
               <option value="de-contact.html">🇩🇪 Deutsch</option>
               <option value="en-contact.html">🇬🇧 English</option>
               <option value="es-contact.html">🇪🇸 Español</option>
-              <!---
               <option value="it-contact.html">🇮🇹 Italiano</option>
-              <option value="ru-contact.html">🇷🇺 Русский</option>
+              <!---<option value="ru-contact.html">🇷🇺 Русский</option>
               <option value="cn-contact.html">🇨🇳 中文</option>
               <option value="jp-contact.html">🇯🇵 日本語</option>
               <option value="kr-contact.html">🇰🇷 한국어</option>
