--- a/fr-research.html
+++ b/fr-research.html
@@ -348,9 +348,8 @@
             <option value="de-research.html">Deutsch</option>
             <option value="en-research.html">English</option>
             <option value="es-research.html">Español</option>
-            <!---
             <option value="it-research.html">Italiano</option>
-            <option value="ru-research.html">Русский</option>
+            <!---<option value="ru-research.html">Русский</option>
             <option value="cn-research.html">中文</option>
             <option value="jp-research.html">日本語</option>
             <option value="kr-research.html">한국어</option>
@@ -446,9 +445,8 @@
               <option value="de-research.html">🇩🇪 Deutsch</option>
               <option value="en-research.html">🇬🇧 English</option>
               <option value="es-research.html">🇪🇸 Español</option>
-              <!---
               <option value="it-research.html">🇮🇹 Italiano</option>
-              <option value="ru-research.html">🇷🇺 Русский</option>
+              <!---<option value="ru-research.html">🇷🇺 Русский</option>
               <option value="cn-research.html">🇨🇳 中文</option>
               <option value="jp-research.html">🇯🇵 日本語</option>
               <option value="kr-research.html">🇰🇷 한국어</option>
