--- a/fr-resume.html
+++ b/fr-resume.html
@@ -347,9 +347,8 @@
             <option value="de-resume.html">Deutsch</option>
             <option value="en-resume.html">English</option>
             <option value="es-resume.html">Español</option>
-            <!---
             <option value="it-resume.html">Italiano</option>
-            <option value="ru-resume.html">Русский</option>
+            <!---<option value="ru-resume.html">Русский</option>
             <option value="cn-resume.html">中文</option>
             <option value="jp-resume.html">日本語</option>
             <option value="kr-resume.html">한국어</option>
@@ -444,9 +443,8 @@
               <option value="de-resume.html">🇩🇪 Deutsch</option>
               <option value="en-resume.html">🇬🇧 English</option>
               <option value="es-resume.html">🇪🇸 Español</option>
-              <!---
               <option value="it-resume.html">🇮🇹 Italiano</option>
-              <option value="ru-resume.html">🇷🇺 Русский</option>
+              <!---<option value="ru-resume.html">🇷🇺 Русский</option>
               <option value="cn-resume.html">🇨🇳 中文</option>
               <option value="jp-resume.html">🇯🇵 日本語</option>
               <option value="kr-resume.html">🇰🇷 한국어</option>
