--- a/fr.html
+++ b/fr.html
@@ -435,9 +435,8 @@
             <option value="de.html">Deutsch</option>
             <option value="en.html">English</option>
             <option value="es.html">Español</option>
-            <!---
             <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <!---<option value="ru.html">Русский</option>
             <option value="cn.html">中文</option>
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
@@ -531,8 +530,8 @@
               <option value="de.html">🇩🇪 Deutsch</option>
               <option value="en.html">🇬🇧 English</option>
               <option value="es.html">🇪🇸 Español</option>
-              <!---
               <option value="it.html">🇮🇹 Italiano</option>
+              <!---
               <option value="ru.html">🇷🇺 Русский</option>
               <option value="cn.html">🇨🇳 中文</option>
               <option value="jp.html">🇯🇵 日本語</option>
