--- a/it-research.html
+++ b/it-research.html
@@ -343,11 +343,11 @@
             <option value="en-research.html">English</option>
             <option value="es-research.html">Español</option>
             <option value="fr-research.html">Français</option>
-            <option value="ru-research.html">Русский</option>
+            <!-- <option value="ru-research.html">Русский</option>
             <option value="cn-research.html">中文</option>
             <option value="jp-research.html">日本語</option>
             <option value="kr-research.html">한국어</option>
-            <option value="ar-research.html">اللغة العربية</option>
+            <option value="ar-research.html">اللغة العربية</option> -->
           </select>
         </span>
       </h3>
@@ -441,11 +441,11 @@
               <option value="en-research.html">🇬🇧 English</option>
               <option value="es-research.html">🇪🇸 Español</option>
               <option value="fr-research.html">🇫🇷 Français</option>
-              <option value="ru-research.html">🇷🇺 Русский</option>
+              <!-- <option value="ru-research.html">🇷🇺 Русский</option>
               <option value="cn-research.html">🇨🇳 中文</option>
               <option value="jp-research.html">🇯🇵 日本語</option>
               <option value="kr-research.html">🇰🇷 한국어</option>
-              <option value="ar-research.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-research.html">🇸🇦 اللغة العربية</option> -->
             </select>
           </span>
         </span>
