--- a/it.html
+++ b/it.html
@@ -435,11 +435,11 @@
             <option value="en.html">English</option>
             <option value="es.html">Español</option>
             <option value="fr.html">Français</option>
-            <option value="ru.html">Русский</option>
+            <!-- <option value="ru.html">Русский</option>
             <option value="cn.html">中文</option>
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar.html">اللغة العربية</option> -->
           </select>
         </span>
       </h3>
@@ -532,11 +532,11 @@
               <option value="en.html">🇬🇧 English</option>
               <option value="es.html">🇪🇸 Español</option>
               <option value="fr.html">🇫🇷 Français</option>
-              <option value="ru.html">🇷🇺 Русский</option>
+              <!-- <option value="ru.html">🇷🇺 Русский</option>
               <option value="cn.html">🇨🇳 中文</option>
               <option value="jp.html">🇯🇵 日本語</option>
               <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ar.html">🇸🇦 اللغة العربية</option> -->
             </select>
           </span>
         </span>
@@ -652,49 +652,49 @@
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/web/slider_sdg_it.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg_it.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg_it_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/web/slider_sdg7_it.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg7_it.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg7_it_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/web/slider_sdg8_it.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg8_it.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg8_it_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/web/slider_sdg9_it.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg9_it.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg9_it_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/web/slider_sdg11_it.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg11_it.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg11_it_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/web/slider_sdg13_it.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg13_it.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg13_it_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/web/slider_sdg14_it.webp" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg14_it.webp" style="width:100%">
             <img class="display-mobile" src="images/sdg/slider_sdg14_it_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
