--- a/ar-contact.html
+++ b/ar-contact.html
@@ -284,8 +284,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_ar3.gif" style="margin-top: -10px; max-width: 100%;" />
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20%; left: 54.7%; max-width: 100%;"></div>
+    <img class="display-mobile" src="images/banner_mobile_ar2.gif" style="margin-top: -10px; max-width: 100%;" />
+    <!-- <div class="red-dot" alt="Munich" style="position: absolute; top: 20%; left: 54.7%; max-width: 100%;"></div> -->
   </div>
 
   <div class="container">
@@ -294,7 +294,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/banner_cns3_left.gif" width="155" />
+          <img id="optionalstuff" src="images/banner_cns2_left.gif" width="155" />
           <div style="margin-bottom: 17px;"></div>
           <h3 class="hidden-mobile" align="left">الدكتور هونغ شو</h3>
 
@@ -325,10 +325,9 @@
       <!--<img class="hidden-mobile" src="images/banner_en2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_ar3.gif" width="800" alt="banner Image" />
-        <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
+        <img src="images/banner_ar2.gif" width="800" alt="banner Image" />
+        <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
         <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
-        <!-- <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div> -->
         <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
         <div class="orange-dot" alt="Zurich" style="top: 33.5%; left: 50.6%;"></div>
         <div class="orange-dot" alt="Beijing" style="top: 43.6%; left: 90.2%;"></div>
@@ -384,7 +383,7 @@
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Washington DC, USA</h6>
           <p>2019-21 QSB MBA</p>
-        </div>
+        </div> -->
       </div>
 
       <p class="hidden-mobile"></p>
