--- a/es-contact.html
+++ b/es-contact.html
@@ -274,8 +274,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_en3.gif" style="margin-top: -10px; max-width: 113%;" />
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+    <img class="display-mobile" src="images/banner_mobile_es2.gif" style="margin-top: -10px; max-width: 113%;" />
+    <!-- <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div> -->
   </div>
 
   <div class="container">
@@ -284,7 +284,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/hong8.png" width="155" />
+          <img id="optionalstuff" src="images/banner_cns2_left.gif" width="155" />
           <div style="margin-bottom: 18px;"></div>
           <h3 class="hidden-mobile" align="left">Dr. Hong Xú</h3>
 
@@ -317,8 +317,8 @@
       <!--<img class="hidden-mobile" src="images/banner_es2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_es3.gif" width="800" alt="banner Image" />
-        <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
+        <img src="images/banner_es2.gif" width="800" alt="banner Image" />
+        <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
         <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
         <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
         <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
@@ -379,7 +379,7 @@
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Washington D.C., EE.UU.</h6>
           <p>2019-21</p>
-        </div>
+        </div> -->
       </div>
 
 
