--- a/cn-contact.html
+++ b/cn-contact.html
@@ -308,8 +308,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_cn3.gif" style="margin-top: -10px; max-width: 113%;" />
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+    <img class="display-mobile" src="images/banner_mobile_cn2.gif" style="margin-top: -10px; max-width: 113%;" />
+    <!-- <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div> -->
   </div>
 
 
@@ -321,7 +321,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img class="hidden-mobile" src="images/banner_cns3_left.gif" width="155" />
+          <img class="hidden-mobile" src="images/banner_cns2_left.gif" width="155" />
           <div style="margin-bottom: 15px;"></div>
           <h3 class="hidden-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text></rt></ruby>
             <ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby> <small><ruby>博 士<rt>科学 / Dr.</rt>
@@ -362,11 +362,11 @@
 
       <div class="image-wrapper hidden-mobile ">
         <div class="image-container">
-          <img src="images/banner_cns3-min.gif" alt="banner Image">
+          <img src="images/banner_cns2.gif" alt="banner Image">
           <div class="image-caption"></div>
         </div>
 
-        <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
+        <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
         <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
         <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
         <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
@@ -434,7 +434,7 @@
               style="height:20px;display:inline-block;top:6px;position:relative;">
             英国 牛津</h6>
           <p>2023</p>
-        </div>
+        </div> -->
 
 
       </div>
