--- a/en-contact.html
+++ b/en-contact.html
@@ -246,8 +246,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_en3.gif" style="margin-top: -10px; max-width: 113%;" />
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+    <img class="display-mobile" src="images/banner_mobile_en2.gif" style="margin-top: -10px; max-width: 113%;" />
+    <!-- <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div> -->
   </div>
 
   <div class="container">
@@ -256,7 +256,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/banner_cns3_left.gif" width="155" />
+          <img id="optionalstuff" src="images/banner_cns2_left.gif" width="155" />
           <div style="margin-bottom: 17px;"></div>
           <h3 class="hidden-mobile" align="left">Dr. Hong Xu</h3>
 
@@ -289,8 +289,8 @@
       <!--<img class="hidden-mobile" src="images/banner_en2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_en3.gif" style="width: 100%; margin-bottom: 2px;" alt="banner Image" />
-
+        <img src="images/banner_en2.gif" style="width: 100%; margin-bottom: 2px;" alt="banner Image" />
+        <!-- 
         <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
         <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
         <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
@@ -351,7 +351,7 @@
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Washington DC, USA</h6>
           <p>2019-21</p>
-        </div>
+        </div> -->
       </div>
 
 
