--- a/jp-contact.html
+++ b/jp-contact.html
@@ -273,9 +273,9 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_jp3.gif" width="800"
+    <img class="display-mobile" src="images/banner_mobile_jp2.gif" width="800"
       style="margin-top: -10px; max-width: 113%;">
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+    <!-- <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div> -->
   </div>
 
 
@@ -285,7 +285,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img class="hidden-mobile" src="images/hong8.png" width="155" />
+          <img class="hidden-mobile" src="images/banner_cns2_left.gif" width="155" />
           <div style="margin-bottom: 15px;"></div>
           <h3 class="hidden-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">シュイ</text></rt></ruby>
             <ruby>泓<rt><text style="letter-spacing: -4px;">ホーン</text></rt></ruby> <small><ruby>博 士<rt>エネルギー</rt>
@@ -319,8 +319,8 @@
       <!--<img class="hidden-mobile" src="images/banner_jp2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_jp3.gif" width="800" alt="banner Image" />
-        <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
+        <img src="images/banner_jp2.gif" width="800" alt="banner Image" />
+        <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
         <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
         <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
         <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
@@ -380,7 +380,7 @@
               style="height:20px;display:inline-block;top:6px;position:relative;">
             米国、ワシントン D.C.</h6>
           <p>2019-21</p>
-        </div>
+        </div> -->
       </div>
 
 
