--- a/kr-contact.html
+++ b/kr-contact.html
@@ -281,9 +281,9 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_kr3.gif" width="800"
+    <img class="display-mobile" src="images/banner_mobile_kr2.gif" width="800"
       style="margin-top: -10px; max-width: 113%;">
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+    <!-- <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div> -->
   </div>
 
   <div class="container">
@@ -292,7 +292,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/hong8.png" width="155" />
+          <img id="optionalstuff" src="images/banner_cns2_left.gif" width="155" />
           <div style="margin-bottom: 13px;"></div>
           <h3 class="hidden-mobile" align="left"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>博 士<rt>
                   에너지박사</rt></ruby></small></h3>
@@ -326,8 +326,8 @@
       <!--<img class="hidden-mobile" src="images/banner_kr2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_kr3.gif" width="800" alt="banner Image" />
-        <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
+        <img src="images/banner_kr2.gif" width="800" alt="banner Image" />
+        <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
         <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
         <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
         <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
@@ -388,7 +388,7 @@
               style="height:20px;display:inline-block;top:6px;position:relative;">
             미국 워싱턴 D.C.</h6>
           <p>2019-21 QSB MBA</p>
-        </div>
+        </div> -->
       </div>
 
       <p class="hidden-mobile"></p>
