--- a/ru-contact.html
+++ b/ru-contact.html
@@ -289,9 +289,9 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_ru3.gif" width="800"
+    <img class="display-mobile" src="images/banner_mobile_ru2.gif" width="800"
       style="margin-top: -10px; max-width: 113%;">
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+    <!-- <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div> -->
   </div>
 
   <div class="container">
@@ -300,7 +300,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/banner_cns3_left.gif" width="155" />
+          <img id="optionalstuff" src="images/banner_cns2_left.gif" width="155" />
           <div style="margin-bottom: 16px;"></div>
           <h3 class="hidden-mobile" align="left">Хун Сюй</h3>
 
@@ -334,15 +334,15 @@
       <!--<img class="hidden-mobile" src="images/banner_ru2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_ru3.gif" width="800" alt="banner Image" />
-        <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
+        <img src="images/banner_ru2.gif" width="800" alt="banner Image" />
+        <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
         <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
         <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
         <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
         <div class="orange-dot" alt="Zurich" style="top: 33.5%; left: 50.6%;"></div>
         <div class="orange-dot" alt="Beijing" style="top: 43.6%; left: 90.2%;"></div>
         <div class="orange-dot" alt="Anqing" style="top: 54.9%; left: 90.8%;"></div>
-        <div class="orange-dot" alt="DC" style="top: 44.9%; left: 18%;"></div>
+        <div class="orange-dot" alt="DC" style="top: 44.9%; left: 18%;"></div> 
         <div class="red-dot" alt="Oxford" style="top: 26.7%; left: 46.7%;"></div>
         <div class="tooltip" style="top:50%; left: 65%;">
           <h6><img src="images/flag_de.png" alt="Flagge"
@@ -393,7 +393,7 @@
               style="height:20px;display:inline-block;top:6px;position:relative;">
             Вашингтон, США</h6>
           <p>2019-21 QSB MBA</p>
-        </div>
+        </div>-->
       </div>
 
       <p class="hidden-mobile"></p>
