--- a/fr-activities.html
+++ b/fr-activities.html
@@ -399,7 +399,7 @@
             <option value="de-activities.html">Deutsch</option>
             <option value="en-activities.html">English</option>
             <option value="es-activities.html">Español</option>
-            <option value="it-activitieshtml">Italiano</option>
+            <option value="it-activities.html">Italiano</option>
             <!---<option value="ru-activities.html">Русский</option>
             <option value="cn-activities.html">中文</option>
             <option value="jp-activities.html">日本語</option>
